[package]
name = "raycast-engine"
version = "0.1.0"
authors = ["Shaleen Baral <shaleenbaral111@gmail.com>"]
edition = "2018"

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"sdl2" = "0.34"
